# get-buildable-recipe

./: .dockerignore  .gitignore  .gitlab-ci.yml  Cargo.toml  Dockerfile  README.md  deps.sh  get-recipe.sh  prod.sh  push.sh  serve.sh  start.sh  stop.sh
.github/workflows/: rust.yml
src/: main.rs
