# NOTE: External depends on cargo-watch. See 
# comment in [dependencies] section below.

[package]
name = "get-buildable-recipe"
version = "0.1.1"
authors = ["Jeremy Carter <jeremy@jeremycarter.ca>"]
edition = "2018"
default-run = "main"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "main"
path = "src/main.rs"

[dependencies]
# Run this once first: cargo install cargo-watch
tokio = { version = "1", features = ["full"] }
warp = "0.3"
warp-real-ip = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
